import "Dat_UserData.proto";

package ProtoBuf;

message C2S_UserData
{
	required string uid = 1;  // 用户uid
	required string code = 2;  // 用来校验的密码
}
message S2C_UserData
{
	required int32 ret = 1;
	required bool newUser = 2; // 是否新用户
	required DAT_UserData userData = 3; //玩家的信息
}